--- a/css/style.css
+++ b/css/style.css
@@ -27,16 +27,9 @@ main{
     grid-column: 1/5;
     border: solid;
     border-radius: 5px;
-}
-
-#screen-input {
-    height: 50px;
-    width: 230px;
-    outline: none;
-    border: none;
     font-size: large;
-    color : transparent;
-    text-shadow : 0 0 0 #000;
+    text-align: right;
+    padding: 15px 5px 15px 5px;
 }
 
 .keys {
